[project]
name = "agreement"
version = "0.1.0"
description = ""
authors = [
    {name = "Italo Silva", email = "italo@maleldil.com"},
]
dependencies = [
	"krippendorff>=0.6.1,<0.7.0",
	"scikit-learn>=1.4.2,<2",
	"scipy>=1.13,<2"
]
requires-python = ">=3.10,<3.11"
license = {text = "GPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
