[project]
name = "annotation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Italo Silva", email = "italo@maleldil.com"},
]
dependencies = [
    "streamlit>=1.34.0",
    "watchdog>=4.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pyright]
typeCheckingMode = "basic"
