[project]
name = "annotation"
version = "0.1.0"
description = "Streamlit app for annotation text extraction data"
authors = [
    {name = "Italo Silva", email = "italo@maleldil.com"},
]
dependencies = [
    "streamlit>=1.34.0",
    "watchdog>=4.0.0",
    "typing-extensions>=4.11.0",
    "extra-streamlit-components>=0.1.71",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
extend = "../pyproject.toml"

[tool.ruff.lint]
extend-ignore = ["N999"] # Streamlit apps have non-standard file/module names

[tool.ruff.lint.isort]
known-first-party = ["annotation"]
