[project]
name = "annotation"
version = "0.1.0"
description = "Streamlit app for annotation text extraction data"
authors = [
    {name = "Italo Silva", email = "italo@maleldil.com"},
]
dependencies = [
    "streamlit>=1.34.0",
    "watchdog>=4.0.0",
    "typing-extensions>=4.11.0",
    "pyyaml>=6.0.1",
    "streamlit-authenticator>=0.3.2",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "GPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
extend = "../pyproject.toml"

[tool.ruff.lint]
extend-ignore = ["N999"] # Streamlit apps have non-standard file/module names

[tool.ruff.lint.isort]
known-first-party = ["annotation"]
