[project]
name = "evaluation"
version = "0.1.0"
description = "Evaluate generative QA results"
authors = [
    {name = "Italo Silva", email = "italo@maleldil.com"},
]
dependencies = [
    "krippendorff<1.0,>=0.6",
    "numpy<2.0,>=1.25",
    "protobuf<5.0,>=4.25",
    "scikit-learn<2.0,>=1.2",
    "scipy<2.0,>=1.12",
    "sentencepiece<1.0.0,>=0.1.99",
    "simple-parsing<1.0.0,>=0.1.2",
    "torch<3.0,>=2.0",
    "tqdm<5.0,>=4.65",
    "transformers<5.0,>=4.33",
    "typer<1.0.0,>=0.9.0",
    "pandas<3.0,>=2.0",
    "openai<2.0,>=1.0",
    "pyarrow>=15.0.0",
    "ratelimit>=2.2.1",
    "sentence-transformers>=2.6.1",
    "tensorboard>=2.16.2",
    "trl>=0.8.6",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "GPT-3.0-only"}

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PL",
    "RUF",
    "SIM",
    "TRY",
    "UP",
    "W",
    "ERA"
]
ignore = [
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "E501",     # Line too long (let Black take care of this)
    "TRY003",   # Long messages outside exception class
    "SIM108",   # Use ternary operation instead of if-else block
    "UP007"     # HFArgumentParser and Typer don't like T | None
]


[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "ruff<1.0.0,>=0.4",
    "black<25.0.0,>=24.2.0",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
