[project]
name = "self_critique"
version = "0.1.0"
description = ""
authors = [
    {name = "Italo Silva", email = "italo@maleldil.com"},
]
dependencies = [
    "datasets==2.12.0",
    "evaluate==0.4.1",
    "scikit-learn==1.2.2",
    "simple-parsing==0.1.2.post1",
    "torch==2.0.0",
    "tqdm==4.65.0",
    "transformers==4.33.2",
    "trl==0.5.0",
    "typer>=0.9.0",
    "numpy>=1.24.3",
    "accelerate>=0.20.3",
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "BLEURT @ git+https://github.com/google-research/bleurt.git",
]
requires-python = ">=3.10,<3.11"
license = {text = "GPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.263",
    "black>=23.3.0",
    "ipykernel>=6.23.1",
    "tensorboard>=2.12.2",
]
[tool.ruff]
extend = "../pyproject.toml"
isort = { known-first-party = ["trainer-seq2seq", "metric"] }
target-version = "py311"
extend-ignore = ["UP007"]  # HF doesn't like T | None

[tool.pyright]
typeCheckingMode = "off"
useLibraryCodeForTypes = false
reportMissingImports = false

[tool.mypy]
disallow_untyped_calls = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
	"torch.*",
	"transformers",
	"datasets",
	"trl",
	"evaluate",
]
ignore_missing_imports = true
