[tool.poetry]
name = "gpt-eval"
version = "0.1.0"
description = "Apply GPT to evaluate FGCR results"
authors = ["Italo Silva <italo@maleldil.com>"]
license = "GPT-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.0"
pandas = "^1.0"
typer = "~0.9"
tqdm = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
